# dev_master

./: .gitignore  00-index.md  02-tools-cost.md  03-ai-roles.md  04-pipeline.md  05-quality.md  06-observability.md  06b-state-persistence.md  07-governance.md  08-repo-structure.md  09-roadmap.md  09b-adaptation-selftest.md  10-ops-ai.md  11-advisor-ai.md  12-disaster-recovery.md  13-appendix.md  14-master-program.md  15-phase-gates.md  16-drift-control.md  17-task-templates.md  18-master-execution-task.md  19-human-governance-boundary.md  20-layered-program-map.md  21-agent-behavior-guidelines.md  22-three-plane-architecture.md  23-menmery-integration.md  24-ai-cold-start.md  25-implementation-language-baseline.md  26-design-closure-review.md  27-external-systems-boundary.md  28-product-principles.md  29-rewrite-blueprint.md  30-project-adapter-blueprint.md  31-external-model-governance-integration.md  AGENTS.md  CONTRACTS.md  README.md  REWRITE-PLAN.md  ai-instructions.md  justfile  (+1 more)
contracts/: software-change-runner-v1.yaml
docs/: README.md
recovered/: AI-autonomous-dev-pipeline-v3.md
reports/: gate-a-design-freeze.md
runner/: __init__.py  local_worktree_runner.py
runtime/: current-task.json  doc-registry.json  implementation-spine.json  program-state.json  session-log.jsonl  task-graph.json
runtime_engine/: __init__.py  devmasterd.py  devmasterd_client.py  devmasterd_validation.py  operational_validation.py  prototype_pipeline.py  provider_adapter.py  runner_contract.py  semantic_benchmark.py  task_progression.py  verifier.py
scripts/: check_ai_base.sh  (+1 more)
(+217 files in other folders)
