[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-master"
version = "0.1.0"
description = "Governed AI software-delivery factory rebuild kernel."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy==1.20.2",
  "ruff==0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"bin/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = [
  "runtime_engine",
  "bin",
]

[tool.setuptools.packages.find]
include = ["runtime_engine*"]
exclude = ["runtime*", "tests*", "docs*"]
